src/objects/GenericURLHacking__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>This is used to store Field Id&apos;s &amp; Labels for transferring values to the URL for standard New/Edit page.

The URL Field Id is differnet for standard and custom fields. For standard fields it is a fixed code (eg &quot;con4_lkid for&quot; for Account ID on Contact). For custom fields it is the fields id (standard salesforce id). You find this id by navigating to the fields setting page and looking in the url for the id.</description>
    <fields>
        <fullName>Default_Value__c</fullName>
        <description>This is an optional field,this stores the default value that&apos;s need to be set.</description>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_Name__c</fullName>
        <description>This is the functionality name for which URL Field Ids are used.Each Field Id must be mapped to the functionality.

Note:This should not be changed.</description>
        <label>Feature Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_Field_Id__c</fullName>
        <description>This field is used to store Ids for transferring the values to the standard New/Edit page</description>
        <label>URL Field Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>GenericURLHackingIdsAndLabels</label>
</CustomObject>